--- a/main.css
+++ b/main.css
@@ -36,6 +36,13 @@ h2 {
     font-size: 1.7rem;
 }
 
+nav {
+    position: -webkit-sticky;
+    position: sticky;
+    top: 0;
+    background-color: white;
+}
+
 nav ul {
     display: flex;
     justify-content: space-around;
