--- a/main.css
+++ b/main.css
@@ -213,7 +213,7 @@ a{
 
 footer {
     background-color: var(--clr-primary);
-    padding: 1.5em 1em;
+    padding: 0 1em;
     font-size: 1rem;
     display: flex;
     justify-content: center;
